# vote-X

./: .gitignore  README.md
.github/workflows/: CI.yml
contract/: Cargo.toml
contract/src/: lib.rs  test.rs
contract/test_snapshots/test/: test_create_proposal.1.json  test_init_and_admin.1.json  test_vote.1.json
frontend/: README.md  get_tx.js  package-lock.json  package.json  script.cjs  test.js  test2.js  test3.js  test4.js  test5.js  test6.js  test7.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: AdminGuard.jsx  BackgroundVideo.jsx  ConnectModal.jsx  CountdownTimer.jsx  Navbar.jsx  ProposalCard.jsx
frontend/src/hooks/: useContract.js  useWallet.jsx
frontend/src/pages/: Home.jsx  MyVotes.jsx  ProposalDetail.jsx  Proposals.jsx  Results.jsx  Verify.jsx
frontend/src/pages/admin/: AdminResults.jsx  CreateProposal.jsx  Dashboard.jsx  ManageProposals.jsx
